--- a/port/src/Home/home.css
+++ b/port/src/Home/home.css
@@ -1,8 +1,32 @@
-.lucy-header{
-    display: flex;
-    flex-direction: column;
+.home-container{
+    width:80%;
+    margin:auto;
+ 
+     /*Flexbox */
+    display:flex;
+    flex-flow:row wrap;
+}
+/*------------HEADER------------ */
+.lucy-header-container{
     align-items: center;
     justify-content: center;
+    font-size: 26px;
+    width: 100%;
+
+    /*Flexbox */
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.lucy-header{
+    position: relative;
+}
+
+.lucy-header-text{
+    position: absolute;
+    bottom: 250px;
+    right: 650px;
 }
 
 .lucy-name{
@@ -10,9 +34,125 @@ height: 120px;
 padding: 10px;
 }
 
-.imagesMenus{
+/*------------NAV------------ */
+.header-nav{
+    width: 100%;
+    font-size: 16px;
+    /*Flexbox */
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.header-nav-a{
+    padding: 7px;
+    border-right: 1px black solid;
+    /*Flexbox */
+
+    
+}
+/*------------MENUS------------ */
+.titles{
+    text-align: center;
+    width: 100%;
+    margin: 20px;
+}
+.menu-container{
+    /* border: 1px solid black; */
+    width: 100%;
+    margin: 20px;
+    /*Flexbox */
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
     align-items: center;
     justify-content: center;
+    /* flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: space-between; */
+}
+
+.menu-item{
+    display: flex;
+    flex-direction: column;
+}
+
+.images-menus{
+    padding: 10px;
+    /* border: 1px solid red; */
+    margin:10px;
+
+    /*Flexbox */
+    /* flex-grow: 1; */
+    /* display: flex;
+    flex-direction: column; */
+    /* align-items: center;
+    justify-content: center; */
+}
+
+/*------------FOOTER MENU------------ */
+
+.footer-container{
+    border: 1px solid black;
+    color: white;
+    background: #1B4E59;
+    width: 100%;
+    padding: 20px;
+   
+    /*Flexbox */
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+    align-items: center;
+    justify-content: center;
+    /* flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: space-between; */
+}
+
+.about-footer {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 20px;
+} 
+
+
+.title-footer{
+    font-size: 32px;
+}
+.logo-container{
+    display: flex;
+    align-items: center;
+} 
+
+.logos-home{
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+}
+.text-logo-footer{
+    margin-left: 10px; 
+}
+
+.button-cv{
+    font-size: 24px;
+    border: 3px solid white;
+    border-radius: 10px;
+    background-color: transparent;
+    color: white;
+    padding: 5px;
+}
+
+.sign-footer{
+    text-align: center;
 }
