responsive for laptop

--- a/port/src/index.css
+++ b/port/src/index.css
@@ -6,13 +6,13 @@
   font-style: normal;
 }
 
-body {
+/* body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
