--- a/port/src/Home/home.css
+++ b/port/src/Home/home.css
@@ -12,21 +12,33 @@
     justify-content: center;
     font-size: 26px;
     width: 100%;
-
+    
     /*Flexbox */
     display: flex;
     flex-direction: column;
     
 }
 
+
 .lucy-header{
-    position: relative;
+    /* position: relative; */
+    background-image: url("./Images/banner-home-2.png");
+    background-size: cover;
+    width: 100%;
+    height: 582px;
 }
 
 .lucy-header-text{
-    position: absolute;
+    /* position: absolute;
     bottom: 250px;
-    right: 650px;
+    right: 650px; */
+    width: 600px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    padding-top: 100px;
+    align-items: center;
 }
 
 .lucy-name{
@@ -60,8 +72,9 @@ padding: 10px;
     margin: 20px;
 }
 .menu-container{
-    /* border: 1px solid black; */
+    border: 1px solid black;
     width: 100%;
+    flex: 50%;
     margin: 20px;
     /*Flexbox */
     display: flex;
@@ -85,6 +98,7 @@ padding: 10px;
     padding: 10px;
     /* border: 1px solid red; */
     margin:10px;
+    width: 100%;
 
     /*Flexbox */
     /* flex-grow: 1; */
@@ -93,6 +107,40 @@ padding: 10px;
     /* align-items: center;
     justify-content: center; */
 }
+
+.images-small{
+    height: 445px; 
+     width: 663px;
+
+}
+
+.images-large{
+    height: 890px;  
+    width: 550px;
+}
+
+.images-high{
+    height: 400px;
+    width: 1300px
+}
+
+#pokemon-image{
+    background-image: url("./Images/pokemon.png");
+}
+
+#foodmap-image{
+    background-image: url('./Images/foodmap.png');
+}
+
+#share-image{
+    background-image: url('./Images/share-smile.png');
+}
+
+#il-piccolo-image{
+    background-image: url('./Images/il-piccolo.png')
+}
+
+
 
 /*------------FOOTER MENU------------ */
 
@@ -155,4 +203,46 @@ padding: 10px;
 
 .sign-footer{
     text-align: center;
+}
+
+@media screen and (max-width: 1300px) {
+
+    /*------------HEADER------------ */
+
+    .home-container {
+        width: 100%;
+    }
+
+    .lucy-name {
+        height: 80px;
+    }
+
+    .lucy-header{
+        height: 350px;
+        max-width: 80%;
+    }
+
+    .lucy-header-text {
+        width: 550px;
+        height: 200px;
+        padding-left: 30px;
+        /* padding-top: 60px; */
+        font-size: 20px;
+    }
+
+    /*------------NAV------------ */
+    .header-nav{
+        justify-content: space-around;
+    }
+
+    .images-menus {
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .images-small{
+        max-width: 70%;
+    }
+
+
 }
