--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -240,9 +240,9 @@ padding: 10px;
         margin: 0px;
     }
 
-    .images-small{
+    /* .images-small{
         max-width: 70%;
-    }
+    } */
 
 
 }
