--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -12,6 +12,7 @@
     justify-content: center;
     font-size: 26px;
     width: 100%;
+    border: 1px black solid;
     
     /*Flexbox */
     display: flex;
@@ -26,13 +27,14 @@
     background-size: cover;
     width: 100%;
     height: 582px;
+    display: flex;
 }
 
 .lucy-header-text{
     /* position: absolute;
     bottom: 250px;
     right: 650px; */
-    width: 600px;
+    width: 500px;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -66,6 +68,10 @@ padding: 10px;
     
 }
 /*------------MENUS------------ */
+.menu-all{
+    display: flex;
+    flex-wrap: wrap;
+}
 .titles{
     text-align: center;
     width: 100%;
@@ -74,16 +80,15 @@ padding: 10px;
 .menu-container{
     border: 1px solid black;
     width: 100%;
-    flex: 50%;
-    margin: 20px;
+    
+    
+    /* margin: 20px;*/
     /*Flexbox */
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-around; */
     align-items: center;
     justify-content: center;
     /* flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
     align-content: space-between; */
@@ -92,6 +97,9 @@ padding: 10px;
 .menu-item{
     display: flex;
     flex-direction: column;
+    /* margin: 20px; */
+    /* flex: 50%;
+    max-width: 50%; */
 }
 
 .images-menus{
@@ -99,7 +107,8 @@ padding: 10px;
     /* border: 1px solid red; */
     margin:10px;
     width: 100%;
-
+    vertical-align: middle;
+    margin: 20px;
     /*Flexbox */
     /* flex-grow: 1; */
     /* display: flex;
@@ -110,35 +119,38 @@ padding: 10px;
 
 .images-small{
     height: 445px; 
-     width: 663px;
+     width: 463px;
+     background: pink
 
 }
 
 .images-large{
     height: 890px;  
-    width: 550px;
+    width: 450px;
+    background: red;
 }
 
 .images-high{
     height: 400px;
-    width: 1300px
+    width: 1000px;
+    background: blue;
 }
 
-#pokemon-image{
+/* #pokemon-image{
     background-image: url("./Images/pokemon.png");
-}
+} */
 
-#foodmap-image{
+/* #foodmap-image{
     background-image: url('./Images/foodmap.png');
-}
+} */
 
-#share-image{
+/* #share-image{
     background-image: url('./Images/share-smile.png');
-}
+} */
 
-#il-piccolo-image{
+/* #il-piccolo-image{
     background-image: url('./Images/il-piccolo.png')
-}
+} */
 
 
 
@@ -179,6 +191,8 @@ padding: 10px;
 .logo-container{
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 } 
 
 .logos-home{
@@ -223,10 +237,6 @@ padding: 10px;
     }
 
     .lucy-header-text {
-        width: 550px;
-        height: 200px;
-        padding-left: 30px;
-        /* padding-top: 60px; */
         font-size: 20px;
     }
 
@@ -235,14 +245,47 @@ padding: 10px;
         justify-content: space-around;
     }
 
-    .images-menus {
-        padding: 0px;
-        margin: 0px;
+    .images-small{
+        height: 345px; 
+         width: 363px;
+    }
+    
+    .images-large{
+        height: 690px;  
+        width: 350px;
+    }
+    
+    .images-high{
+        height: 300px;
+        width: 800px;
     }
 
-    /* .images-small{
-        max-width: 70%;
-    } */
+}
 
+@media screen and (max-width: 780px) {
+    .menu-all{
+align-items: center;
+width: 100%;
+    }
 
+    .images-large{
+        height: 345px; 
+         width: 363px;
+        
+    }
+    
+    .images-high{
+        height: 300px;
+        width: 500px;
+    }
+    
+}
+
+@media screen and (max-width: 460px) {
+    
+    .images-high{
+        height: 345px; 
+        width: 363px;
+    }
+    
 }
