--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -12,6 +12,7 @@
     justify-content: center;
     font-size: 26px;
     width: 100%;
+    padding-top: 80px;
     /* border: 1px black solid; */
     
     /*Flexbox */
@@ -54,11 +55,14 @@ padding: 10px;
     font-size: 16px;
     /*Flexbox */
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
+    position: fixed;
+    background-color: white
 }
+
 
 .header-nav-a{
     padding: 7px;
@@ -76,6 +80,7 @@ padding: 10px;
     text-align: center;
     width: 100%;
     margin: 20px;
+    padding-top: 20px;
 }
 .menu-container{
     /* border: 1px solid black; */
@@ -109,6 +114,7 @@ padding: 10px;
     width: 100%;
     vertical-align: middle;
     margin: 20px;
+    
     /*Flexbox */
     /* flex-grow: 1; */
     /* display: flex;
@@ -124,6 +130,27 @@ padding: 10px;
      /* background: pink; */
 }
 
+
+.images-menus-text {
+    position: relative;
+    top: -10px;
+    left: -10px;
+    border-radius: 20px;
+    height: 302px;
+    width: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    opacity: 0;
+    transition: .5s ease;
+    background: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
+}
+.images-small:hover .images-menus-text{
+    /* text-align:justify; */
+    opacity: 0.7;
+
+}
 .images-large{
     height: 640px;
     width: 450px;
@@ -224,6 +251,10 @@ padding: 10px;
 
 @media screen and (max-width: 1300px) {
 
+    .lucy-header-container{
+        padding-top: 30px;
+    }
+
     /*------------HEADER------------ */
 
     .home-container {
@@ -314,6 +345,12 @@ width: 100%;
         height: 200px; 
         width: 300px;
         background-size: 100%
+    }
+
+    .images-menus-text {
+        height: 200px;
+        width: 300px;
+        display: flex;
     }
 
     /* #pokemon-image{
