--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -69,6 +69,7 @@ padding: 10px;
     padding: 7px;
     border-right: 1px black solid;
     text-decoration: none;
+    color: inherit;
     /*Flexbox */
 
     
@@ -135,13 +136,15 @@ padding: 10px;
 
 .images-menus-text {
     position: relative;
-    font-size: 25px;
+    font-size: 16px;
     top: -10px;
     left: -10px;
+    padding: 10px;
     /* border-radius: 20px; */
     /* height: 302px;
     width: 450px; */
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     color: black;
@@ -188,6 +191,17 @@ padding: 10px;
 .images-high:hover .images-menus-text{
     /* text-align:justify; */
     opacity: 0.7;
+}
+
+.images-menu-links{
+    padding: 7px;
+    border: 1px black solid;
+    text-decoration: none;
+    font-size: 20px;
+    color: inherit;
+    /*Flexbox */
+
+    
 }
 
 #pokemon-image{
@@ -286,7 +300,7 @@ padding: 10px;
     }
 
     .lucy-name {
-        height: 80px;
+        height: 100px;
     }
 
     .lucy-header{
