--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -42,6 +42,8 @@
     padding-left: 30px;
     padding-top: 100px;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .lucy-name{
@@ -281,6 +283,7 @@ padding: 10px;
     background-color: transparent;
     color: white;
     padding: 5px;
+    text-decoration: none;
 }
 
 .sign-footer{
@@ -356,7 +359,7 @@ width: 100%;
     .lucy-header{
         background-image: url("./Images/banner.jpg");
         background-size: 100%;
-        height: 485px;
+        height: 435px;
         background-repeat: no-repeat;
         border-radius: 20px;
     }
