--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -7,29 +7,38 @@
 }
 /*------------HEADER------------ */
 .lucy-header-container {
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   font-size: 24px;
   width: 100%;
-  padding-top: 80px;
+  /* padding-top: 80px; */
   /*Flexbox */
   display: flex;
   flex-direction: column;
-  
+  flex-wrap: wrap;
+  border: 1px solid black;
+  background: #F4B4A0;
+  height: 32rem;
+}
+
+#lucyBanner{
+  background-image: url("./Images/il-piccolo.png");
+  background-size: cover;
+  width: 50%;
+  height: 100%;
 }
 
 .lucy-header {
   /* position: relative; */
-  background-image: url("./Images/banner-home-3.png");
-  background-size: cover;
-  width: 80%;
-  height: 350px;
+  width: 50%;
+  height: 100%;
   display: flex;
+  border: 1px solid blue;
 }
 
 .lucy-header-text {
-  width: 500px;
-  height: 300px;
+  width: 50vw;
+  height: 100%;
   display: flex;
   flex-direction: column;
   padding-left: 30px;
@@ -37,17 +46,28 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  border: 1px solid black;
 }
 
 .lucy-name {
-  height: 120px;
-  padding: 10px;
+  height:  5rem;
+  padding: .5rem;
 }
 
 /*------------NAV------------ */
+#logo-lucy {
+  background-image: url("./Images/lucyName.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 4rem;
+  padding: .5rem;
+  width: 16rem;
+  margin-top: 1rem;
+}
+
 .header-nav {
   width: 100%;
-  font-size: 16px;
+  font-size: 1rem;
   /*Flexbox */
   display: flex;
   justify-content: space-around;
@@ -57,6 +77,7 @@
   position: fixed;
   background-color: white;
   z-index: 1;
+  border: 1px solid black
 }
 
 .header-nav-a {
@@ -269,6 +290,7 @@
   .header-nav {
     justify-content: space-around;
     font-size: 15px;
+    padding-bottom: .6rem;
   }
 }
 
