adding il piccolo and foodmap projects

--- a/src/Home/styles/home.css
+++ b/src/Home/styles/home.css
@@ -95,17 +95,17 @@
   background-image: url("../Images/POKEMON-HOME.gif");
 } */
 
-#foodmap-image {
+/* #foodmap-image {
   background-image: url("../Images/foodmap.png");
-}
+} */
 
 /* #share-image {
   background-image: url("../Images/share-smile");
 } */
 
-#il-piccolo-image {
+/* #il-piccolo-image {
   background-image: url("../Images/il-piccolo-gif.gif");
-}
+} */
 /*------------FOOTER MENU------------ */
 
 .footer-container {
