--- a/src/Home/styles/projects.css
+++ b/src/Home/styles/projects.css
@@ -25,7 +25,7 @@
 
 .project-container-info {
   font-size: 0.9rem;
-  height: 22rem;
+  height: 24rem;
   width: 100%;
   /*Flexbox */
   display: flex;
@@ -35,6 +35,10 @@
 
 .share-smile {
   background: #e6edf0;
+}
+
+.il-piccolo{
+  background: #F3914F;
 }
 
 .project-images {
@@ -86,6 +90,7 @@
 
 #share-image {
   background-image: url("../Images/share-smile-home.png");
+  background-size: cover;
   width: 100%;
   height: 22rem;
   /* background-repeat: no-repeat; */
@@ -93,7 +98,21 @@
 }
 
 #bikely-image {
-    background-image: url("../Images/bikely-home.gif");
+    background-image: url("../Images/bikely.gif");
+    background-size: cover;
+    width: 100%;
+    height: 22rem;
+  }
+
+  #il-piccolo-image {
+    background-image: url("../Images/il-piccolo.png");
+    background-size: cover;
+    width: 100%;
+    height: 22rem;
+  }
+
+  #foodmap-image {
+    background-image: url("../Images/foodmap-gif.gif");
     background-size: cover;
     width: 100%;
     height: 22rem;
