--- a/src/Home/styles/projects.css
+++ b/src/Home/styles/projects.css
@@ -25,7 +25,7 @@
 
 .project-container-info {
   font-size: 0.9rem;
-  height: 24rem;
+  height: 26rem;
   width: 100%;
   /*Flexbox */
   display: flex;
@@ -45,6 +45,7 @@
   width: 50%;
   height: 100%;
   display: flex;
+  justify-content: center;
   /* border: 1px solid blue; */
 }
 
@@ -83,37 +84,34 @@
 
 #pokemon-image {
   background-image: url("../Images/pokemon-home-gif.gif");
-  background-size: cover;
-  width: 100%;
-  height: 22rem;
+  /* background-size: cover; */
+  background-repeat: no-repeat;
+  width: 90%;
 }
 
 #share-image {
   background-image: url("../Images/share-smile-home.png");
   background-size: cover;
   width: 100%;
-  height: 22rem;
   /* background-repeat: no-repeat; */
-  background-size: cover;
+  /* background-size: cover; */
 }
 
 #bikely-image {
     background-image: url("../Images/bikely.gif");
-    background-size: cover;
-    width: 100%;
-    height: 22rem;
+    background-repeat: no-repeat;
+    /* background-size: cover; */
+    width: 90%;
   }
 
   #il-piccolo-image {
     background-image: url("../Images/il-piccolo.png");
     background-size: cover;
     width: 100%;
-    height: 22rem;
   }
 
   #foodmap-image {
     background-image: url("../Images/foodmap-gif.gif");
     background-size: cover;
     width: 100%;
-    height: 22rem;
   }
