--- a/src/Home/styles/home.css
+++ b/src/Home/styles/home.css
@@ -7,7 +7,7 @@
 }
 
 
-.menu-item {
+/* .menu-item {
   display: flex;
   flex-direction: column;
 }
@@ -81,7 +81,7 @@
 
 .images-high:hover .images-menus-text {
   opacity: 0.7;
-}
+} */
 
 /* .images-menu-links {
   padding: 7px;
@@ -107,70 +107,36 @@
   background-image: url("../Images/il-piccolo-gif.gif");
 } */
 
+@media screen and (max-width: 780px) {
 
-@media screen and (max-width: 1300px) {
   .lucy-header-container {
-    /* padding-top: 30px; */
-  }
-
-  /*------------HEADER------------ */
-
-  .home-container {
-    width: 100%;
-  }
-
-  .lucy-name {
-    height: 100px;
+    font-size: 1rem;
   }
 
   .lucy-header {
-    /* height: 380px; */
-    /* max-width: 80%; */
+    width: 50%;
   }
 
-  .lucy-header-text {
-    font-size: 20px;
-  }
-
-  /*------------NAV------------ */
-  .header-nav {
-    justify-content: space-around;
-    font-size: 15px;
-    padding-bottom: .6rem;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  .menu-all {
-    align-items: center;
-    width: 100%;
-  }
-
-  /* #share-image {
-    background-image: url("../Images/share-smile-tablet.png");
-  } */
-
-  #il-piccolo-image {
-    background-image: url("../Images/tablet-il-piccolo-gif.gif");
-  }
-
-  .images-large {
-    height: 302px;
-    width: 450px;
-  }
-
-  .images-high {
-    height: 302px;
-    width: 450px;
-  }
 }
 
 @media screen and (max-width: 460px) {
-  .lucy-header-container {
-    padding-top: 110px;
+  .lucy-header-text {
+    height: 12rem;
+    width: 100%;
   }
 
   .lucy-header {
+    width: 100%;
+    height: 12rem;
+
+    /* border: 1px solid blue; */
+  }
+  .lucy-header-container {
+    padding-top: 5.6rem;
+  }
+
+
+   /* .lucy-header {
     background-image: url("../Images/banner.jpg");
     background-size: 100%;
     height: 435px;
@@ -211,5 +177,5 @@
     height: 200px;
     width: 270px;
     display: flex;
-  }
+  } */
 }
