--- a/src/Home/styles/know-me.css
+++ b/src/Home/styles/know-me.css
@@ -1,7 +1,7 @@
 .lucy-know {
     /* width: 50%; */
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     display: flex;
     flex-direction: column;
     padding: 1rem;
@@ -19,6 +19,8 @@
     display: flex;
     flex-direction: row;
     padding: 1.1rem;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .icon-with-name{
