--- a/src/Home/styles/nav.css
+++ b/src/Home/styles/nav.css
@@ -21,6 +21,7 @@
     position: fixed;
     background-color: white;
     z-index: 1;
+    padding-bottom: .5rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     /* border: 1px solid black */
   }
