--- a/src/Home/styles/projects.css
+++ b/src/Home/styles/projects.css
@@ -8,13 +8,10 @@
   text-align: center;
   width: 100%;
   margin-top: 20px;
- 
+
   /* padding-top: 20px; */
 }
 
-/* #scroll{
-    background-image: url("../Images/scroll.png");
-} */
 .project-container {
   width: 100%;
   /*Flexbox */
@@ -38,8 +35,8 @@
   background: #e6edf0;
 }
 
-.il-piccolo{
-  background: #F3914F;
+.il-piccolo {
+  background: #f3914f;
 }
 
 .project-images {
@@ -85,9 +82,9 @@
 
 #pokemon-image {
   background-image: url("../Images/pokemon-home-gif.gif");
-  /* background-size: cover; */
+  background-size: contain;
   background-repeat: no-repeat;
-  width: 90%;
+  width: 100%;
 }
 
 #share-image {
@@ -99,20 +96,20 @@
 }
 
 #bikely-image {
-    background-image: url("../Images/bikely.gif");
-    background-repeat: no-repeat;
-    /* background-size: cover; */
-    width: 90%;
-  }
+  background-image: url("../Images/bikely.gif");
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+  width: 100%;
+}
 
-  #il-piccolo-image {
-    background-image: url("../Images/il-piccolo.png");
-    background-size: cover;
-    width: 90%;
-  }
+#il-piccolo-image {
+  background-image: url("../Images/il-piccolo.png");
+  background-size: cover;
+  width: 100%;
+}
 
-  #foodmap-image {
-    background-image: url("../Images/foodmap-gif.gif");
-    background-size: cover;
-    width: 100%;
-  }
+#foodmap-image {
+  background-image: url("../Images/foodmap-gif.gif");
+  background-size: contain;
+  width: 100%;
+}
