--- a/src/Home/styles/header.css
+++ b/src/Home/styles/header.css
@@ -1,46 +1,45 @@
-
 /*------------HEADER------------ */
 .lucy-header-container {
-    /* justify-content: flex-end; */
-    font-size: 1.5rem;
-    height: 24rem;
-    width: 100%;
-    /*Flexbox */
-    display: flex;
-    flex-wrap: wrap;
-    /* border: 1px solid black; */
-    background: #F4B4A0;
-    padding-top: 4.6rem;
-  }
-  
-  #lucyBanner{
-    background-image: url("../Images/header-lucy.png");
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .lucy-header {
-    width: 40%;
-    height: 100%;
-    display: flex;
-    /* border: 1px solid blue; */
-  }
-  
-  .lucy-header-text {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 1.5rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    /* border: 1px solid black; */
-  }
-  
-  .text-bold{
-    font-weight: 600;
-    padding-bottom: 1rem;
-    width: 70%;
-  }
+  /* justify-content: flex-end; */
+  font-size: 1.5rem;
+  height: 24rem;
+  width: 100%;
+  /*Flexbox */
+  display: flex;
+  flex-wrap: wrap;
+  /* border: 1px solid black; */
+  background: #f4b4a0;
+  padding-top: 4.6rem;
+}
+
+#lucyBanner {
+  background-image: url("../Images/header-lucy.png");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.lucy-header {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  /* border: 1px solid blue; */
+}
+
+.lucy-header-text {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  /* border: 1px solid black; */
+}
+
+.text-bold {
+  font-weight: 600;
+  padding-bottom: 1rem;
+  width: 70%;
+}
