--- a/src/Home/styles/home.css
+++ b/src/Home/styles/home.css
@@ -41,11 +41,16 @@
 
   .project-container-info {
     height: 36rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 2rem 0rem;
   }
 
   .project-images {
     width: 100%;
     height: 40%;
+  }
+  .hide {
+    display: none;
   }
 
   .project-text {
