--- a/src/Home/styles/header.css
+++ b/src/Home/styles/header.css
@@ -8,16 +8,18 @@
   display: flex;
   flex-wrap: wrap;
   /* border: 1px solid black; */
-  background: #f4b4a0;
-  padding-top: 4.6rem;
+  background-image: url("../Images/banner-web-lucy.jpg");
+  background-size: cover;
+  /* background: #f4b4a0; */
+  margin-top: 4.6rem;
 }
 
-#lucyBanner {
+/* #lucyBanner {
   background-image: url("../Images/header-lucy.png");
   background-size: cover;
   width: 100%;
   height: 100%;
-}
+} */
 
 .lucy-header {
   width: 50%;
@@ -27,7 +29,7 @@
 }
 
 .lucy-header-text {
-  width: 50%;
+  width:100%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -40,6 +42,7 @@
 
 .text-bold {
   font-weight: 600;
-  padding-bottom: 1rem;
-  width: 70%;
+  padding-bottom: 1.5rem;
+  letter-spacing: 3px;
+  /* width: 70%; */
 }
