--- a/src/Home/styles/header.css
+++ b/src/Home/styles/header.css
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
+  padding-top: 2rem;
   align-items: center;
   justify-content: center;
   text-align: center;
