--- a/src/Home/styles/projects.css
+++ b/src/Home/styles/projects.css
@@ -31,6 +31,10 @@
   /* border: 1px solid black; */
 }
 
+.pixar{
+  background: #f1d8d3;
+}
+
 .share-smile {
   background: #e6edf0;
 }
@@ -66,6 +70,7 @@
 
 .project-text-info {
   padding: 1rem;
+  letter-spacing: 1px;
 }
 
 .images-menu-links {
@@ -78,6 +83,18 @@
   margin-top: 1rem;
   display: flex;
   justify-content: center;
+}
+
+.white-text{
+  color: white;
+}
+
+#pixar-image {
+  background-image: url("../Images/pixar-3.gif");
+  background-size: cover;
+  width: 100%;
+  /* background-repeat: no-repeat; */
+  /* background-size: cover; */
 }
 
 #pokemon-image {
